2001-03-26  Mark Kettenis  <kettenis@gnu.org>

	* i386-linux-tdep.c (i386_linux_sigtramp_saved_pc,
	i386_linux_sigtramp_saved_sp): Make static.
	(i386_linux_frame_saved_pc): New function based on the old
	FRAME_SAVED_PC macro, but use read_memory_unsigned_integer instead
	of read_memory_integer.
	* config/i386/tm-linux.h (sigtramp_saved_pc): Remove definition.
	(i386_linux_sigtramp_saved_pc): Remove prototype.
	(FRAME_SAVED_PC): Redefine in terms of i386_linux_frame_saved_pc.
	(i386_linux_frame_saved_pc): New prototype.

2001-03-26  Andrew Cagney  <ac131313@redhat.com>

	* MAINTAINERS: Document m88k as a ``Known problem in 5.1''.
	* TODO (GDB 5.1 - Cleanups): Update.

2001-03-26  Andrew Cagney  <ac131313@redhat.com>

	* fork-child.c (clone_and_follow_inferior): Delete #ifdef
	HAVE_VFORK.

2001-03-26  Mark Kettenis  <kettenis@gnu.org>

	* config/i386/tm-symmetry.h (PUSH_ARGUMENTS): #undef.

	* i386-tdep.c (i386_push_arguments, i386_store_struct_return): New
	functions.
	* config/i386/tm-i386.h (PUSH_ARGUMENTS): New macro.
	(STORE_STRUCT_RETURN): Redefine in terms of
	i386_store_struct_return.
	(i386_push_arguments, i386_store_struct_return): New prototypes.
	* config/i386/tm-i386v.h (STORE_STRUCT_RETURN): Remove.  It's
	definition was identical to the definition in "i386/tm-i386.h" so
	the new definition should suffice too.

2001-03-26  Eli Zaretskii  <eliz@is.elta.co.il>

	* event-loop.c (toplevel) [!HAVE_POLL] [NO_FD_SET]: Remove unused
	definitions for SELECT, NBBY, FD_SETSIZE, NFDBITS, and MASK_SIZE.

	* config/djgpp/djconfig.sh: Add copyright notice.

	* ser-go32.c (rawclock): Remove prototype; include time.h instead.
	(ISR, dos_hookirq, isr_t): Convert K&R definition to ANSI C.
	(top level) <string.h>: Include gdb_string.h instead.
	(dos_noop, dos_raw, dos_noflush_set_tty_state) 
	(dos_print_tty_state, dos_info): Remove ATTRIBUTE_UNUSED.

	* go32-nat.c (go32_create_inferior): Move the declaration of
	`environ' to here from the top level.